#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æ·»åŠ æ‰¹æ¬¡36åˆ°æ•°æ®åº“
"""

import sys
from pathlib import Path

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°Pythonè·¯å¾„
project_root = Path(__file__).parent.parent.parent.parent
sys.path.insert(0, str(project_root / 'devdoc' / 'protobuf' / 'reports' / 'scripts'))

from core.migration_tracker import MigrationTracker, Batch, MigrationFile

def add_batch_36():
    """æ·»åŠ æ‰¹æ¬¡36åˆ°æ•°æ®åº“"""
    with MigrationTracker() as tracker:
        # æ£€æŸ¥æ‰¹æ¬¡æ˜¯å¦å·²å­˜åœ¨
        existing = tracker.get_batch_by_name("batch_36")
        if existing:
            print(f"âš ï¸  æ‰¹æ¬¡ batch_36 å·²å­˜åœ¨ï¼Œå°†æ›´æ–°å…¶çŠ¶æ€")
            tracker.update_batch(existing.id, status="completed")
            print(f"âœ… æ‰¹æ¬¡ batch_36 çŠ¶æ€å·²æ›´æ–°ä¸º completed")
            return

        # åˆ›å»ºæ‰¹æ¬¡36
        batch = Batch(
            id=None,
            batch_name="batch_36",
            batch_number=36,
            description="æ¸¸æˆç³»ç»Ÿï¼ˆå¡”ã€ç‚¼é‡‘ã€è¡£æŸœã€ç§°å·ï¼‰",
            status="completed",
            priority=5,
            total_files=8,
            migrated_files=8,
            start_date="2026-02-10",
            planned_end_date=None,
            actual_end_date="2026-02-10",
            blocker=None,
            notes="åŒ…å«å¡”ç³»ç»Ÿã€ç‚¼é‡‘ç³»ç»Ÿã€è¡£æŸœç³»ç»Ÿå’Œç§°å·ç³»ç»Ÿçš„æ¶ˆæ¯å®šä¹‰",
            created_at=None,
            updated_at=None
        )

        batch_id = tracker.create_batch(batch)
        print(f"âœ… æ‰¹æ¬¡ batch_36 å·²åˆ›å»ºï¼ŒID: {batch_id}")

        # æ·»åŠ æ–‡ä»¶
        files = [
            ("PT_TOWER_INFO", "TowerInfo", 11080, "gamesystems.proto", "batch36_test.go"),
            ("PT_TOWER_OF_ILLUSION_CLEAR_RATE", "TowerOfIllusionClearRate", None, "gamesystems.proto", "batch36_test.go"),
            ("PT_TONIC_INFO", "TonicInfo", 11039, "gamesystems.proto", "batch36_test.go"),
            ("PT_TONIC_MATERIAL_USAGE", "TonicMaterialUsage", None, "gamesystems.proto", "batch36_test.go"),
            ("PT_WARDROBE_INFO", "WardrobeInfo", 14081, "gamesystems.proto", "batch36_test.go"),
            ("PT_AVATAR_MANNEQUIN_INFO", "AvatarMannequinInfo", None, "gamesystems.proto", "batch36_test.go"),
            ("PT_AVATAR_MANNEQUIN_PART_INFO", "AvatarMannequinPartInfo", None, "gamesystems.proto", "batch36_test.go"),
            ("PT_REMOVEITEMS", "RemoveItems", None, "gamesystems.proto", "batch36_test.go"),
        ]

        for file_name, module_name, module_id, proto_file, test_file in files:
            file = MigrationFile(
                id=None,
                batch_id=batch_id,
                file_name=file_name,
                module_name=module_name,
                module_id=module_id,
                status="completed",
                priority=5,
                proto_file=proto_file,
                java_file=None,
                has_test=True,
                test_passed=True,
                issues_count=0,
                migration_notes=None,
                start_date="2026-02-10",
                completion_date="2026-02-10",
                created_at=None,
                updated_at=None
            )
            tracker.create_file(file)
            print(f"âœ… æ–‡ä»¶ {file_name} å·²æ·»åŠ ")

        print(f"\nğŸ“¦ æ‰¹æ¬¡36æ·»åŠ å®Œæˆï¼Œå…± {len(files)} ä¸ªæ–‡ä»¶")

if __name__ == "__main__":
    add_batch_36()
